--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,22 @@
+# --- Core Backend ---
 fastapi==0.104.1
 uvicorn==0.24.0
-pandas==2.1.3
-numpy==1.26.2
-ctgan==0.8.0
-sdv==1.8.0
-scikit-learn==1.3.2
-streamlit==1.28.2
 python-multipart==0.0.6
 pydantic==2.5.2
-pytest==7.4.3
 requests==2.31.0
+
+# --- ML / Data (Python 3.11 compatible) ---
+numpy==1.26.4
+pandas==2.1.4
+scikit-learn==1.3.2
+
+# --- Synthetic Data ---
+ctgan==0.8.0
+sdv==1.8.0
+
+# --- Visualization (optional, but safe) ---
 matplotlib==3.8.2
 seaborn==0.13.0
 
+# --- Dev / Testing ---
+pytest==7.4.3
